# curly-invention

./: Makefile  README.md  build  disco.json  dune-project  index.html  style.css
lib/: data.ml
public/: index.bc.js  index.html  index.js
src/: data.ts  main.ts
test/: dune
