(lang dune 3.20)

(name curly-invention)

(generate_opam_files false)

(source
 (github demaere-oiie/curly-invention))

(authors "Dave Long <dave.long@bluewin.ch>")

(maintainers "Dave Long <dave.long@bluewin.ch>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name curly-invention)
 (synopsis "Bad Project Ideas")
 (description "Uniformly randomly generate lousy project ideas")
 (depends ocaml)
 (allow_empty))
